# python-project-83

./: README.md  database.sql  makefile  pyproject.toml
page_analyzer/: __init__.py  app.py  db.py  validator.py
page_analyzer/templates/: 404.html  500.html  footer.html  header.html  index.html
page_analyzer/templates/layouts/: layout.html
page_analyzer/templates/urls/: index.html  show.html
tests/: test_page_analyzer.py
