[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "Page analyzer for hexlet.io"
authors = ["ShcherbinaDmitry <shcherbinadmitry@gmail.com>"]
readme = "README.md"
packages = [{include = "page_analyzer"}]

[tool.poetry.dependencies]
python = "^3.9"
flask = "^2.2.2"
gunicorn = "^20.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
